--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/Components/ProductReviews.razor
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/Components/ProductReviews.razor
@@ -1,4 +1,5 @@
-﻿@inject ReviewService reviewService
+﻿@using GroceryMarketPlace.Domain.Entities
+@inject ReviewService reviewService
 
 <h1 class="display-6">Reviews</h1>
 
