--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/Pages/_Host.cshtml
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/Pages/_Host.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/"
+@using GroceryMarketPlace.Web
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @namespace MunsonPickles.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
