Update auth api

--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/Shared/LoginDisplay.razor
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/Shared/LoginDisplay.razor
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.Identity.Web
 @using Microsoft.Extensions.Options
 
+@inject IOptionsMonitor<MicrosoftIdentityOptions> microsoftIdentityOptions
+
 <AuthorizeView>
     <Authorized>
         Hello, @context.User.Identity?.Name!
