--- a/GroceryMarketPlace/src/GroceryMarketPlace.Web/Pages/_Host.cshtml
+++ b/GroceryMarketPlace/src/GroceryMarketPlace.Web/Pages/_Host.cshtml
@@ -2,7 +2,7 @@
 @using GroceryMarketPlace.Web
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@namespace MunsonPickles.Web.Pages
+@namespace GroceryMarketPlace.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
